# Checkerscpp

./: CMakeLists.txt  README.md
checkers/: main.cpp
checkers/include/: board.h  pawn.h  piece.h
checkers/src/: board.cpp  coordinate.cpp  king.cpp  pawn.cpp
checkers1/include/: board.h  coordinate.h  king.h  pawn.h  piece.h
checkers1/src/: board.cpp  pawn.cpp
checkerslib/include/: board.h  coordinate.h  king.h  piece.h
checkerslib/src/: pawn.cpp  piece.cpp
tests/: main.cpp
